--- a/src/app/shared/footer/widgets/why-we-choose/why-we-choose.component.html
+++ b/src/app/shared/footer/widgets/why-we-choose/why-we-choose.component.html
@@ -1,1 +1,11 @@
-<p>why-we-choose works!</p>
+<div class="footer-title">
+    <h4>why we choose</h4>
+</div>
+<div class="footer-contant">
+    <ul>
+        <li><a>shipping & return</a></li>
+        <li><a>secure shopping</a></li>
+        <li><a routerLink="pages/contact" >contacts</a></li>
+        <li><a routerLink="pages/about-us" >about us</a></li>
+    </ul>
+</div>
