--- a/src/assets/scss/theme/_style.scss
+++ b/src/assets/scss/theme/_style.scss
@@ -2582,9 +2582,9 @@ header {
         font-weight: 700;
         text-transform: uppercase;
         writing-mode: vertical-rl;
-        transform: rotate(-180deg);
-        top: 7px;
-        right: 7px;
+        // transform: rotate(-180deg);
+        // top: 7px;
+        right: 1px;
         letter-spacing: 0.1em;
         z-index: 1;
       }
