--- a/src/app/landingpage/landingpage.component.html
+++ b/src/app/landingpage/landingpage.component.html
@@ -1,1 +1,10 @@
-<p>landingpage works!</p>
+<section class="main-img pt-0" style="padding-top: 200px !important; padding-left: 396px !important;">
+    <div class="container-fluid">
+        <div class="main-contain">
+            <div>
+                <h1 class="m-0">Sahosoft<span>Mall</span></h1>
+                <h3 class="m-0">The <span>BEST SELLING</span> e-Commerce Website</h3>
+            </div>
+        </div>
+    </div>
+</section>
