--- a/src/app/shared/footer/widgets/categories/categories.component.html
+++ b/src/app/shared/footer/widgets/categories/categories.component.html
@@ -1,1 +1,9 @@
-<p>categories works!</p>
+<div class="footer-title">
+    <h4>Categories</h4>
+</div>
+<div class="footer-contant">
+    <ul>
+        <li><a routerLink="/home/left-sidebar/collection/women">Womens Fashion</a></li>
+        <li><a routerLink="/home/left-sidebar/collection/men">Mens Fashion</a></li>
+    </ul>
+</div>
