--- a/src/app/shared/footer/widgets/copyrights/copyrights.component.html
+++ b/src/app/shared/footer/widgets/copyrights/copyrights.component.html
@@ -1,1 +1,29 @@
-<p>copyrights works!</p>
+<div class="row">
+    <div class="col-xl-6 col-md-6 col-sm-12">
+        <div class="footer-end">
+            <p><i class="fa fa-copyright" aria-hidden="true"></i> {{today |  date:'y' }} Sahosoft mall powered by
+                sahosoft pvt ltd </p>
+        </div>
+    </div>
+    <div class="col-xl-6 col-md-6 col-sm-12">
+        <div class="payment-card-bottom">
+            <ul>
+                <li>
+                    <a><img src="assets/images/icon/visa.png" alt=""></a>
+                </li>
+                <li>
+                    <a><img src="assets/images/icon/mastercard.png" alt=""></a>
+                </li>
+                <li>
+                    <a><img src="assets/images/icon/paypal.png" alt=""></a>
+                </li>
+                <li>
+                    <a><img src="assets/images/icon/american-express.png" alt=""></a>
+                </li>
+                <li>
+                    <a><img src="assets/images/icon/discover.png" alt=""></a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
