--- a/src/app/shared/header/widgets/setting/setting.component.html
+++ b/src/app/shared/header/widgets/setting/setting.component.html
@@ -1,1 +1,15 @@
-<p>setting works!</p>
+<div class="icon-nav">
+    <ul>
+        <li class="onhover-div mobile-setting">
+            <div><img src="assets/images/icon/setting.png" class="img-fluid" alt="">
+                <i class="ti-settings"></i></div>
+            <div class="show-div setting">
+                <h6>language</h6>
+                <ul>
+                    <li><a (click)="changeLanguage('en')">English</a> </li>
+                    <li><a (click)="changeLanguage('hi')">Hindi</a> </li>
+                </ul>
+            </div>
+        </li>
+    </ul>
+</div>
