--- a/src/app/shared/header/widgets/topbar/topbar.component.html
+++ b/src/app/shared/header/widgets/topbar/topbar.component.html
@@ -1,1 +1,31 @@
-<p>topbar works!</p>
+<div class="row">
+    <div class="col-lg-6">
+        <div class="header-contact">
+            <ul>
+                <li>{{'topbar-title' | translate }}</li>
+                <li><i class="fa fa-phone" aria-hidden="true"></i>{{'call-us' | translate }} : 8376817046</li>
+            </ul>
+        </div>
+    </div>
+    <!-- <div class="col-lg-6 text-right"> -->
+    <div class="col-lg-6 text-end">
+        <ul class="header-dropdown">
+            <li class="onhover-dropdown mobile-account">
+                <i class="fa fa-user" aria-hidden="true"></i> 
+                {{'my-account' | translate }} &nbsp;&nbsp;&nbsp;
+                <ul class="onhover-show-div">
+                    <li>
+                        <a routerLink="/pages/login" >
+                            {{'login' | translate }}
+                        </a>
+                    </li>
+                    <li>
+                        <a routerLink="/home/shop" >
+                            {{'logout' | translate }}
+                        </a>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+</div>
