--- a/src/app/shop/home/logo/logo.component.html
+++ b/src/app/shop/home/logo/logo.component.html
@@ -1,1 +1,17 @@
-<p>logo works!</p>
+<section class="section-b-space">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12" *ngIf="logo.length > 0">
+                <ngx-slick-carousel class="no-arrow" #slickModal="slick-carousel" [config]="logoSliderConfig">
+                    <div ngxSlickItem *ngFor="let lg of logo">
+                        <div class="logo-block">
+                            <a routerLink="/home/shop">
+                                <img [src]="lg.dwnldUrl" alt="brand logo image" style = "width:100%; height:auto;" />
+                            </a>
+                        </div>
+                    </div>
+                </ngx-slick-carousel>
+            </div>
+        </div>
+    </div>
+</section>
