--- a/src/app/shop/home/product-tab/product-tab.component.html
+++ b/src/app/shop/home/product-tab/product-tab.component.html
@@ -1,1 +1,43 @@
-<p>product-tab works!</p>
+<div class="title1 section-t-space">
+    <h4>exclusive products</h4>
+    <h2 class="title-inner1">special products</h2>
+</div>
+<section class="section-b-space p-t-0">
+    <div class="container">
+        <div class="row">
+            <div class="col">
+
+                <div class="theme-tab">
+                    <ul class="tabs tab-title">
+                        <li class="current">
+                            <a href="tab-1" >New Products</a>
+                        </li>
+                        <li class="">
+                            <a href="tab-2">Best Sellers</a>
+                        </li>
+                    </ul>
+                    <div class="tab-content-cls">
+                        <div class="tab-content active default"  id="tab-1">
+                            <div class="no-slider row">
+                                <!-- <div class="product-box" *ngFor="let product of products | slice:0:8" > -->
+                                <div class="product-box" *ngFor="let product of products" >
+                                    <!-- Show Product 1 -->
+                                    <app-product [product]="product"></app-product>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tab-content" id="tab-2">
+                            <div class="no-slider row">
+                                <!-- <div class="product-box"  *ngFor="let product of products | slice:8:16"> -->
+                                <div class="product-box"  *ngFor="let product of products">
+                                    <!-- Show Product 2 -->
+                                    <app-product [product]="product"></app-product>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
