--- a/src/app/shop/home/slider/slider.component.html
+++ b/src/app/shop/home/slider/slider.component.html
@@ -1,1 +1,41 @@
-<p>slider works!</p>
+<!-- Home slider -->
+<section class="p-0">
+    <ngx-slick-carousel class="home-slider" #slickModal="slick-carousel" [config]="SliderConfig">
+    <div ngxSlickItem >
+        <div class="home home1 text-center">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <div class="slider-contain">
+                            <div>
+                                <h4>welcome to fashion</h4>
+                                <h1>Men fashion</h1>
+                                <a routerLink="/home/left-sidebar/collection/men" class="btn btn-solid">shop now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div ngxSlickItem>
+        <div class="home home2 text-center">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <div class="slider-contain">
+                            <div>
+                                <h4>welcome to fashion</h4>
+                                <h1>Women fashion</h1>
+                                <a routerLink="/home/left-sidebar/collection/women" class="btn btn-solid">shop now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</ngx-slick-carousel>
+</section>
+<!-- Home slider end -->
