--- a/src/app/shop/product/product.component.html
+++ b/src/app/shop/product/product.component.html
@@ -1,1 +1,91 @@
-<p>product works!</p>
+<ng-template [ngIf]="product">
+
+    <div class="img-wrapper">
+        <div class="lable-block">
+            <span class="lable3" *ngIf="product.isNew">new</span>
+            <img  *ngIf="product.isSale" class="img-fluid lable4" src="../../../assets/images/sale.jpg" alt="on sale" width="45px">
+        </div>
+        <div class="front">
+            <a [routerLink]="['/left-sidebar/product',product.id]">
+                <img class="img-fluid" [src]="product.dwnldUrl" alt="product Image">
+            </a>
+        </div>
+        <div class="cart-info cart-wrap">
+            <a title="Add to cart" (click)="addToCart(product)" >
+                <i class="ti-shopping-cart"></i>
+            </a>
+            <a title="Add to Wishlist" (click)="addToWishlist(product)">
+                <i class="ti-heart" aria-hidden="true"></i>
+            </a>
+            <a title="Quick View" [routerLink]="['/left-sidebar/product',product.id]">
+                <i class="ti-search" aria-hidden="true"></i>
+            </a>
+            <a title="Compare" routerLink="/home/compare" (click)="addToCompare(product)" >
+                <i class="ti-reload" aria-hidden="true"></i>
+            </a>
+        </div>
+    </div>
+    <div class="product-detail">
+        <div>
+            <bar-rating [rate]="5" [readOnly]="true" ></bar-rating>
+            <a [routerLink]="['/left-sidebar/product',product.id]">
+                <h6> {{product.name}} </h6>
+            </a>
+            <h4> {{product.price}}
+                <del><span class="money">{{product.salePrice}} </span></del>
+            </h4>
+        </div>
+    </div>
+    
+</ng-template>
+
+
+
+
+
+
+
+
+<!-- <div class="img-wrapper" *ngIf="product">
+    <div class="lable-block">
+        <span class="lable3" *ngIf="product.isNew">new</span>
+        <span class="lable4" *ngIf="product.isSale">on sale</span>
+    </div>
+    <div class="front">
+        <a [routerLink]="['/left-sidebar/product',product.id]">
+            <img class="img-fluid" [src]="!variantImage? product.pictures[0]:variantImage" alt="product Image"></a>
+    </div>
+    <ul class="product-thumb-list">
+        <li class="grid_thumb_img" *ngFor="let variant of product.variants"
+            [ngClass]="{'active':selectedImage===variant.images}">
+            <a (click)="changeVarientImage(variant.images)">
+                <img [src]="variant.images">
+            </a>
+        </li>
+    </ul>
+    <div class="cart-info cart-wrap">
+        <a title="Add to cart" (click)="addToCart(product)" >
+            <i class="ti-shopping-cart"></i>
+        </a>
+        <a title="Add to Wishlist" (click)="addToWishlist(product)">
+            <i class="ti-heart" aria-hidden="true"></i>
+        </a>
+        <a title="Quick View" [routerLink]="['/left-sidebar/product',product.id]">
+            <i class="ti-search" aria-hidden="true"></i>
+        </a>
+        <a title="Compare" routerLink="/home/compare" (click)="addToCompare(product)" >
+            <i class="ti-reload" aria-hidden="true"></i>
+        </a>
+    </div>
+</div>
+<div class="product-detail">
+    <div>
+        <bar-rating [rate]="5" [readOnly]="true" ></bar-rating>
+        <a [routerLink]="['/left-sidebar/product',product.id]">
+            <h6> {{product.name}} </h6>
+        </a>
+        <h4> {{product.price}}
+            <del><span class="money">{{product.salePrice}} </span></del>
+        </h4>
+    </div>
+</div> -->
