--- a/src/app/shop/product/collection/filter/color/color.component.html
+++ b/src/app/shop/product/collection/filter/color/color.component.html
@@ -1,1 +1,13 @@
-<p>color works!</p>
+<div class="collection-collapse-block open">
+    <h3 class="collapse-block-title collapse-block-title1">colors</h3>
+    <div class="collection-collapse-block-content collection-collapse-block-content1">
+        <div class="color-selector">
+            <ul>
+                <li *ngFor="let filter of colorsFiltersInput" [ngClass]="filter.color"
+                    [class.active]="activeItem == filter.color"
+                    (click)="changeColor(activeItem == filter.color?{} : filter)">
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
