--- a/src/app/shop/product/collection/filter/brand/brand.component.html
+++ b/src/app/shop/product/collection/filter/brand/brand.component.html
@@ -1,1 +1,12 @@
-<p>brand works!</p>
+<div class="collection-collapse-block open">
+    <h3 class="collapse-block-title collapse-block-title1">brand</h3>
+    <div class="collection-collapse-block-content collection-collapse-block-content1">
+        <div class="collection-brand-filter">
+            <div class="custom-control custom-checkbox collection-filter-checkbox"
+                *ngFor="let filter of tagsFiltersInput">
+                <input type="checkbox" class="custom-control-input" [value]="filter.brand" [id]="filter.brand" (change)="checkedFilter($event)" >
+                <label class="custom-control-label" for={{filter.brand}}  >{{filter.brand}}</label>
+            </div>
+        </div>
+    </div>
+</div>
