--- a/src/app/shop/product/product-details/product-left-sidebar/product-left-sidebar.component.html
+++ b/src/app/shop/product/product-details/product-left-sidebar/product-left-sidebar.component.html
@@ -1,1 +1,232 @@
-<p>product-left-sidebar works!</p>
+<!-- breadcrumb start -->
+<div class="breadcrumb-section">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="page-title">
+                    <h2>Product</h2>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <nav aria-label="breadcrumb" class="theme-breadcrumb">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a routerLink="/home/shop">Home</a></li>
+                        <li class="breadcrumb-item active" aria-current="page">Product</li>
+                    </ol>
+                </nav>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- breadcrumb End -->
+<!-- section start -->
+<section class="section-b-space">
+    <div class="collection-wrapper">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-3 collection-filter">
+                    <!-- Side bar here -->
+                    <app-sidebar></app-sidebar>
+                </div>
+                <div class="col-lg-9 col-sm-12 col-xs-12">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-xl-12">
+                                <div class="filter-main-btn mb-2">
+                                    <span class="filter-btn"><i class="fa fa-bars" aria-hidden="true"></i>sidebar</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <ngx-slick-carousel class="product-slick" #slickModal="slick-carousel"
+                                    [config]="slideConfig" id="p-zoom">
+                                    <div ngxSlickItem *ngFor="let image of product.dwnldUrl">
+                                        <div>
+                                            <lib-ngx-image-zoom [thumbImage]="image" [fullImage]="image"
+                                                [magnification]="1" [enableScrollZoom]="true" [enableLens]="true"
+                                                [lensWidth]="400" [lensHeight]="500" zoomMode="hover">
+                                            </lib-ngx-image-zoom>
+                                        </div>
+                                    </div>
+                                </ngx-slick-carousel>
+
+                                <div class="row">
+                                    <div class="col-12 p-0">
+                                        <ngx-slick-carousel class="slider-nav" #slickModal="slick-carousel"
+                                            [config]="slideNavConfig">
+                                            <div ngxSlickItem *ngFor="let image of product.dwnldUrl">
+                                                <img [src]="image" alt="image" class="img-fluid" />
+                                            </div>
+                                        </ngx-slick-carousel>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-6 rtl-text">
+                                <div class="product-right">
+                                    <h2> {{product.name}} </h2>
+                                    <h4>
+                                        <del> {{product.price | currency : productsService?.currency :'symbol'}} </del>
+                                        <span>
+                                            {{product.discount}} %
+                                            off</span></h4>
+                                    <h3>
+                                        {{product.price | currency : productsService?.currency :'symbol'}} </h3>
+                                <ng-container *ngIf="product.quantity">
+                                    <div class="pro_inventory" *ngIf="product.quantity != 0 && product.quantity <=5">
+                                        <p class="active" >
+                                            Hurry! We have only {{product.quantity}} product in stock.
+                                        </p>
+                                        <div class="inventory-scroll nostripes active">
+                                            <span style="width: 95%;"></span>
+                                        </div>
+                                    </div>
+                                </ng-container>
+                                    <div class="product-description border-product">
+                                        <div class="size-box">
+                                            <!-- <ul>
+                                                <li *ngFor="let size of product.size"
+                                                    [ngClass]="{'active': selectedSize== size}">
+                                                    <a (click)="changeSizeVariant(size)"> {{size}} </a>
+                                                </li>
+                                            </ul> -->
+                                            <ul>
+                                                <li>
+                                                    <a (click)="changeSizeVariant(product.size)"> {{ product.sizeId }} </a>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                        <h5 class="avalibility" *ngIf="product.quantity"><span *ngIf="counter<=product.quantity">In Stock</span>
+                                        </h5>
+                                        <h5 class="avalibility" *ngIf="product.quantity"><span *ngIf="counter>product.quantity">Out of
+                                                Stock</span></h5>
+                                        <h6 class="product-title">quantity</h6>
+                                        <div class="qty-box">
+                                            <div class="input-group">
+                                                <span class="input-group-prepend">
+                                                    <button type="button" class="btn quantity-left-minus"
+                                                        data-type="minus" (click)="decement()">
+                                                        <i class="ti-angle-left"></i>
+                                                    </button>
+                                                </span>
+                                                <input type="text" name="quantity" class="form-control input-number"
+                                                    disabled [value]="counter">
+                                                <span class="input-group-prepend">
+                                                    <button type="button" class="btn quantity-right-plus"
+                                                        data-type="plus" (click)="increment()">
+                                                        <i class="ti-angle-right"></i>
+                                                    </button>
+                                                </span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="product-buttons" *ngIf="product.quantity">
+                                        <a class="btn btn-solid" [class.disabled]="counter>product.quantity"
+                                            (click)="addToCart(product,counter)">add to cart</a>
+                                        <a class="btn btn-solid" [class.disabled]="counter>product.quantity"
+                                            (click)="buNow(product,counter)">buy now</a>
+                                    </div>
+                                    <div class="border-product">
+                                        <h6 class="product-title">product details</h6>
+                                        <p> {{product.shortDetails}} </p>
+                                    </div>
+                                    <div class="border-product">
+                                        <div class="product-icon">
+                                            <form class="d-inline-block">
+                                                <button class="wishlist-btn" (click)="addToWishlist(product)"><i
+                                                        class="fa fa-heart"></i><span class="title-font">
+                                                        Add To WishList</span></button>
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <section class="tab-product m-0">
+                        <div class="row">
+                            <div class="col-sm-12 col-lg-12">
+                                <ul class="nav nav-tabs nav-material" id="top-tab" role="tablist">
+                                    <li class="nav-item">
+                                        <a class="nav-link active" id="top-home-tab" data-toggle="tab" href="#tophome"
+                                            role="tab" aria-selected="true">
+                                            <i class="icofont icofont-ui-home"></i>{{product.description}} </a>
+                                        <div class="material-border"></div>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" id="profile-top-tab" data-toggle="tab" href="#top-profile"
+                                            role="tab" aria-selected="false"><i
+                                                class="icofont icofont-man-in-glasses"></i> {{product.shortDetails}} </a>
+                                        <div class="material-border"></div>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" id="contact-top-tab" data-toggle="tab" href="#topcontact"
+                                            role="tab" aria-selected="false">
+                                            <i class="icofont icofont-contacts"></i>Video</a>
+                                        <div class="material-border"></div>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" id="review-top-tab" data-toggle="tab" href="#top-review"
+                                            role="tab" aria-selected="false">
+                                            <i class="icofont icofont-contacts"></i>Write Review</a>
+                                        <div class="material-border"></div>
+                                    </li>
+                                </ul>
+                                <div class="tab-content nav-material" id="top-tabContent">
+                                    <div class="tab-pane fade show active" id="top-home" role="tabpanel"
+                                        aria-labelledby="top-home-tab">
+                                        <p>description</p>
+                                    </div>
+                                    <div class="tab-pane fade" id="top-profile" role="tabpanel"
+                                        aria-labelledby="profile-top-tab">
+                                        <p>short Details</p>
+                                        <div class="single-product-tables">
+                                        </div>
+                                    </div>
+                                    <div class="tab-pane fade" id="top-contact" role="tabpanel"
+                                        aria-labelledby="contact-top-tab">
+                                        <div class="mt-3 text-center">
+                                            Show video here
+                                        </div>
+                                    </div>
+                                    <div class="tab-pane fade" id="top-review" role="tabpanel"
+                                        aria-labelledby="review-top-tab">
+                                        <form class="theme-form">
+                                            <div class="form-row">
+                                                <div class="col-md-6">
+                                                    <label for="name">Name</label>
+                                                    <input type="text" class="form-control" id="name"
+                                                        placeholder="Enter Your name" required>
+                                                </div>
+                                                <div class="col-md-6">
+                                                    <label for="email">Email</label>
+                                                    <input type="text" class="form-control" id="email"
+                                                        placeholder="Email" required>
+                                                </div>
+                                                <div class="col-md-12">
+                                                    <label for="review">Review Title</label>
+                                                    <input type="text" class="form-control" id="review"
+                                                        placeholder="Enter your Review Subjects" required>
+                                                </div>
+                                                <div class="col-md-12">
+                                                    <label for="review">Review Description</label>
+                                                    <textarea class="form-control"
+                                                        placeholder="Wrire Your Testimonial Here" rows="6"></textarea>
+                                                </div>
+                                                <div class="col-md-12">
+                                                    <button class="btn btn-solid" type="submit">Submit YOur
+                                                        Review</button>
+                                                </div>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- Section ends -->
