--- a/src/app/shop/product/product-details/sidebar/sidebar.component.html
+++ b/src/app/shop/product/product-details/sidebar/sidebar.component.html
@@ -1,1 +1,5 @@
-<p>sidebar works!</p>
+<div class="collection-filter-block">
+    <app-categories></app-categories>
+</div>
+
+<app-new-product></app-new-product>
