--- a/src/app/shop/product/widgets/new-product/new-product.component.html
+++ b/src/app/shop/product/widgets/new-product/new-product.component.html
@@ -1,1 +1,21 @@
-<p>new-product works!</p>
+<div class="theme-card" *ngIf="products.length > 0">
+    <h5 class="title-border">new Product</h5>
+
+    <ngx-slick-carousel class="offer-slider" #slickModal="slick-carousel">
+        <div ngxSlickItem *ngFor="let product of products | slice:0:3 ">
+            <div class="media" *ngFor="let product of products | slice:0:3 ">
+                <a [routerLink]="['/home/left-sidebar/product',product.id]">
+                    <img *ngIf="product.dwnldUrl" [src]="product.dwnldUrl[0]" class="img-fluid" alt=image />
+                </a>
+
+                <div class="media-body align-self-center">
+                    <bar-rating [rate]="5" [readOnly]="true"></bar-rating>
+                    <a>
+                        <h6>{{product.name}}</h6>
+                    </a>
+                    <h4>{{product.price | currency : productsService?.currency :'symbol'}}</h4>
+                </div>
+            </div>
+        </div>
+    </ngx-slick-carousel>
+</div>
